--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,6 @@
 [submodule "application/third_party/carabiner"]
 	path = application/third_party/carabiner
 	url = git@github.com:mikedfunk/carabiner.git
+[submodule "tests/assets/scripts/qunit"]
+	path = tests/assets/scripts/qunit
+	url = git://github.com/jquery/qunit.git
