updated travis to update subs.

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_script:
   - pyrus channel-discover pear.php-tools.net
   - pyrus install http://pear.php-tools.net/get/vfsStream-0.11.2.tgz
   - phpenv rehash
+  - git submodule update --init
   - git submodule foreach git pull origin master
 
 script: phpunit --configuration tests/phpunit.xml 
