updated travis to update subs.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_script:
   - pyrus install http://pear.php-tools.net/get/vfsStream-0.11.2.tgz
   - phpenv rehash
   - git submodule update --init
+  - yes
   - git submodule foreach git pull origin master
 
 script: phpunit --configuration tests/phpunit.xml 
