updated travis to update subs.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,12 @@ phps:
   - 5.3
   - 5.4
 
+before_install:
+  git submodule init && git submodule --quiet update
+
 before_script:
   - pyrus channel-discover pear.php-tools.net
   - pyrus install http://pear.php-tools.net/get/vfsStream-0.11.2.tgz
   - phpenv rehash
-  - git submodule update --init
-  - git submodule foreach git pull origin master
 
 script: phpunit --configuration tests/phpunit.xml 
