--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "codeigniter"]
 	path = codeigniter
 	url = git://github.com/EllisLab/CodeIgniter.git
+[submodule "assets/twitter_bootstrap"]
+	path = assets/twitter_bootstrap
+	url = git://github.com/mikedfunk/bootstrap.git
