--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ phps:
 
 before_install:
   git submodule init && git submodule --quiet update
+  cd codeigniter
+  ls
 
 before_script:
   - pyrus channel-discover pear.php-tools.net
