--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ phps:
   - 5.4
 
 before_install:
-  git submodule init && git submodule --quiet update
-  cd codeigniter
-  ls
+  - git submodule init && git submodule --quiet update
+  - cd codeigniter
+  - ls
 
 before_script:
   - pyrus channel-discover pear.php-tools.net
