--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,12 @@ phps:
 
 before_install:
   - git submodule init && git submodule --quiet update
-  - cd codeigniter
-  - ls
 
 before_script:
   - pyrus channel-discover pear.php-tools.net
   - pyrus install http://pear.php-tools.net/get/vfsStream-0.11.2.tgz
   - phpenv rehash
 
-script: phpunit --configuration tests/phpunit.xml 
+script:
+  - cd tests
+  - phpunit
